<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>asr_sdm_object_detector</name>
  <version>0.0.0</version>
  <description>YOLOv8通用目标检测ROS2节点</description>
  <maintainer email="your_email@example.com">wang</maintainer>
  <license>Apache-2.0</license>




  <!-- 构建依赖（仅保留必要项，删除 Autoware 消息依赖） -->
  <build_depend>ament_cmake</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <!-- <build_depend>vision_msgs</build_depend>  ROS2 标准检测消息 -->
  <build_depend>OpenCV</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>asr_sdm_perception_msgs</build_depend>

  <!-- 运行依赖（与构建依赖一致） -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <!-- <exec_depend>vision_msgs</exec_depend> -->
  <exec_depend>OpenCV</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>asr_sdm_perception_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- 测试依赖（可选） -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- 插件声明（ROS2 组件节点） -->
  <export>
    <build_type>ament_cmake</build_type>
    <rclcpp_components plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>