<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>minkindr</name>
  <version>1.0.0</version>
  <description>minkindr - A minimal kinematic library for C++</description>

  <maintainer email="paul.furgale@gmail.com">Paul Furgale</maintainer>
  <maintainer email="azxiyuanqian@outlook.com">lxy</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eigen</depend>
  <depend>libgoogle-glog-dev</depend>
  <test_depend>eigen_checks</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
