<?xml version="1.0"?>
<package format="3">
  <name>minkindr_python</name>
  <version>1.0.0</version>
  <description>Python exports for minkindr.</description>

  <maintainer email="mathias.buerki@mavt.ethz.ch">Mathias Buerki</maintainer>
  <license>New BSD</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>python3-dev</depend>
  <depend>python3-numpy</depend>
  <depend>minkindr</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
